--- a/我的世界服务器列表.md
+++ b/我的世界服务器列表.md
@@ -14,4 +14,17 @@
 | `tree.ac`            | 最少最慢但是有AAC5反作弊 :0       |
 | `test.karhu.ac`      | karhu反作弊测试服             |
 
+## 小游戏服务器（JAVA版本）
 
+> 反作弊和服务器IP将持续更新
+
+| 服务器名称             | 反作弊                                             | 服务器IP                                                           | 游玩人数      | 服务器      | 评价                                  | 封禁时间                   |
+| ----------------- | ----------------------------------------------- | --------------------------------------------------------------- | --------- | -------- | ----------------------------------- | ---------------------- |
+| **Blocksmc**（块MC） | `NewNCP（关闭部分移动检测）+OldVerus`和客服反作弊               | 离线：`blocksmc.com` `play.blocksmc.com` 正版：`premium.blocksmc.com` | 不低于`500`人 | 瑞士-许嫩贝格  | 两个反作弊都很烂，主要靠的是客服在背后输入`/ban`         | 客服 `7天` 反作弊`24小时`      |
+| **Supercraft**    | 最新版本`Vulcan`和稀有的客服反作弊                           | 离线+正版：`supercraft.es`                                           | `300`人    | 法国-鲁贝    | 进入服务器要关掉`vulcan`反作弊禁用器，因为有机器人检测     | 客服 `30天` 反作弊 `2小时`     |
+| **Minemora**      | 空岛是`AAC3`反作弊，Skypvp和竞技场是`Vulcan`反作弊             | 离线+正版：`minemora.net`                                            | `50人`     | 加拿大-博哈努瓦 | 曾经很多人玩但是后来冷了，AAC3和Vulcan反作弊让人感到快乐   | 客服 `30天` 反作弊 `12小时`    |
+| **Blockdrop**     | `NewNCP`反作弊但飞行检测约等于没有，搭路也能绕过，还说自己是`watchdog`反作弊 | 离线+正版：`mc.blockdrop.org`                                        | `400`人    | 加拿大-蒙特利尔 | 因为已经没有起床战争模式了，但是曾经带来了很多快乐所以留着       | 客服 `30天` 反作弊 `60天`     |
+| **3FMC**          | 最新`GrimAC`+关掉一堆检测只有搭路和杀戮等检测的未知版本`Matrix`反作弊     | 离线+正版：`3fmc.com`                                                | `200`人    | 越南-平新县   | 离我最近的一个服务器，延迟也友好，使用`hyt`配置进入服务器直接快乐 | 客服 `15天到永久` 反作弊 `踢到大厅` |
+| **Mineblaze**     | 大名鼎鼎的`intave`反作弊                                | 离线+正版：`mineblaze.ru`                                            | `1000`人   | 德国-兰河畔林堡 | 俄罗斯的大牛服务器，进入服务器有反机器人                | 客服 `30天` 反作弊 `踢大厅`     |
+| **Zonecraft**     | 最新`GrimAC`反作弊                                   | 离线+正版：`zonecraft.es`                                            | `300`人    | 瑞士-许嫩贝格  |                                     |                        |
+| **SekSin**        | 旧版`GrimAC`反作弊                                   | 离线+正版：`mc-seksin.net`                                           | `800`人    | 泰国-曼谷    | 泰国有钱赢游戏的服务器里面一堆充钱大哥一刀秒杀你            | 客服 `7天` 反作弊`踢出服务器`     |
